<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:isScrollContainer="true"
    android:background="@drawable/gradient_grey"
    tools:context=".DetailEventActivity" >
        
        <TextView
		    android:id="@+id/section_EventDetails"
		    style="?android:attr/listSeparatorTextViewStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="15sp"
		    android:textColor="#50c0e9"
		    android:divider="#50c0e9"
		    android:dividerHeight="2dp"
		    android:text="@string/section_EventDetails"/>
        
        <RelativeLayout
	 	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
        	
	    	<TextView
	    	    android:id="@+id/textView_title"
	    	    android:layout_width="wrap_content"
	    	    android:layout_height="wrap_content"
	    	    android:paddingRight="10dp"
	    	    android:text="@string/label_title"
	    	    android:textAppearance="?android:attr/absListViewStyle"
	    	    android:textSize="16sp"
	    	    android:width="70dp" />
	    	
		    <TextView
		        android:id="@+id/edit_tvTitle"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/textView_title"
		        android:textSize="16sp" />
	    
	    </RelativeLayout>
	    
	    <RelativeLayout
	 	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
		    
	        <TextView
	            android:id="@+id/textView_docName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="10dp"
	            android:text="@string/label_nameD"
	            android:textAppearance="?android:attr/absListViewStyle"
	            android:textSize="16sp"
	            android:width="70dp" />
	    	
		    <TextView
		        android:id="@+id/edit_tvNameDoc"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/textView_docName"
		        android:textSize="16sp" />
	    
	    </RelativeLayout>
	    
	    <RelativeLayout
	 	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	    
	        <TextView
	            android:id="@+id/textView_patName"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="10dp"
	            android:text="@string/label_nameP"
	            android:textAppearance="?android:attr/absListViewStyle"
	            android:textSize="16sp"
	            android:width="70dp" />
		    	
		    <TextView
		        android:id="@+id/edit_tvNamePat"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/textView_patName"
		        android:textSize="16sp" />
		    
	    </RelativeLayout>
	    
	    <RelativeLayout
	 	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	    
	        <TextView
	            android:id="@+id/textView_location"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="10dp"
	            android:text="@string/label_loc"
	            android:textAppearance="?android:attr/absListViewStyle"
	            android:textSize="16sp"
	            android:width="70dp" />
		    	
			<TextView
		        android:id="@+id/edit_tvLoc"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/textView_location"
		        android:textSize="16sp" />
		    
	    </RelativeLayout>
	    
	    <RelativeLayout
	 	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
	    
	        <TextView
	            android:id="@+id/textView_desc"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:paddingRight="10dp"
	            android:text="@string/label_desc"
	            android:textAppearance="?android:attr/absListViewStyle"
	            android:textSize="16sp"
	            android:width="70dp" />
		    	
		<TextView
	        android:id="@+id/edit_tvDescription"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/textView_desc"
	        android:textSize="16sp" />
		    
	    </RelativeLayout>

		<TextView
		    android:id="@+id/section_EventTime"
		    style="?android:attr/listSeparatorTextViewStyle"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="15sp"
		    android:layout_marginBottom="15sp"
		    android:textColor="#50c0e9"
		    android:divider="#50c0e9"
		    android:text="@string/section_EventTime" />
		
		<RelativeLayout
	 	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
        	
		    <TextView
		        android:id="@+id/textView_date"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingRight="10dp"
		        android:text="@string/label_date"
		        android:textAppearance="?android:attr/absListViewStyle"
		        android:textSize="16sp"
		        android:width="70dp" />
			
			<TextView
		        android:id="@+id/edit_tvDate"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/textView_date"
		        android:textSize="16sp" />
			
		</RelativeLayout>
		
	 	<RelativeLayout
	 	    android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal">
        	
		    <TextView
		        android:id="@+id/textView_time"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingRight="10dp"
		        android:text="@string/label_time"
		        android:textAppearance="?android:attr/absListViewStyle"
		        android:textSize="16sp"
		        android:width="70dp" />
		    
			<TextView
		        android:id="@+id/edit_tvTime"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/textView_time"
		        android:textSize="16sp" />
			
		</RelativeLayout>

</LinearLayout>