<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lText"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
        <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sText"
        android:layout_below="@id/textView1"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sText"
        android:layout_below="@id/textView2"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView3"
        android:text="@string/sText"
        android:textSize="16sp"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
	<RelativeLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentRight="true"
       android:layout_alignParentBottom="true" >
       
	   	<ImageView
	        android:id="@+id/btnAddClock"
	        android:src="@drawable/ic_action_add_alarm"
	        android:layout_width="50dp"
	        android:layout_height="50dp"
	        android:contentDescription="@string/alarmClockDesc"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentBottom="true" />

	</RelativeLayout>

</RelativeLayout>
